<resources>
    <string name="app_name">Contacts Manager</string>

    <string name="activity_list_name">Contacts</string>
    <string name="empty_list">Your contact list is empty.</string>
    <string name="add_contact">ADD A CONTACT</string>
    <string name="delete">Delete</string>
    <string name="delete_up">DELETE</string>
    <string name="edit_up">EDIT</string>
    <string name="edit">Edit</string>

    <string name="activity_detail_name">New Contact</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email Address</string>
    <string name="home_phone">Home number</string>
    <string name="mobile_phone">Mobile number</string>
    <string name="save">Save</string>

</resources>
