<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="theleatherguy.contactsmanager.view.ContactEditActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/contactEditToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TableRow>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@null"
                android:src="@drawable/ic_person"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/labelFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/first_name"
                    android:inputType="textCapWords|text"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/labelLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editLastName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/last_name"
                    android:inputType="textCapWords|text"/>
            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@null"
                android:src="@drawable/ic_email"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/labelEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@null"
                android:src="@drawable/ic_smartphone"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/labelMobilePhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editMobilePhone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/mobile_phone"
                    android:inputType="phone"/>
            </android.support.design.widget.TextInputLayout>
        </TableRow>


        <TableRow
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@null"
                android:src="@drawable/ic_phone"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/labelHomePhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editHomePhone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/home_phone"
                    android:inputType="phone"/>
            </android.support.design.widget.TextInputLayout>
        </TableRow>

    </TableLayout>

</LinearLayout>